# AReaL

./: pyproject.toml
.agents/skills/commit-conventions/: SKILL.md
.agents/skills/review-pr/: MIGRATION.md  SKILL.md  sync_review_pr_refs.py
.agents/skills/review-pr/references/: review-pr-domains-and-signals.md  review-pr-templates.md
.claude/commands/: review-pr.md
.claude/data/: review-pr-domains-and-signals.md  review-pr-templates.md
.claude/skills/commit-conventions/: SKILL.md
.github/workflows/: bake-gcp-image.yml  test-areal.yml
.opencode/command/: review-pr.md
.opencode/data/: review-pr-domains-and-signals.md  review-pr-templates.md
.opencode/skills/commit-conventions/: SKILL.md
areal/api/: cli_args.py  reward_api.py
areal/engine/: fsdp_engine.py  megatron_engine.py
areal/engine/fsdp_utils/: grad.py
areal/experimental/engine/: archon_checkpoint.py  archon_engine.py  archon_lora_checkpoint.py  archon_runner.py  archon_utils.py  archon_weight_sync.py
areal/experimental/inference_service/: __init__.py
areal/experimental/inference_service/controller/: config.py  controller.py  workflow.py
areal/experimental/inference_service/data_proxy/: __main__.py  app.py  backend.py  config.py  inf_bridge.py  session.py
areal/experimental/inference_service/gateway/: app.py
areal/experimental/inference_service/guard/: __main__.py  app.py
areal/experimental/inference_service/router/: app.py  state.py
areal/experimental/models/archon/: base.py  fp8.py  fp8_checkpoint.py
areal/experimental/models/archon/lora/: __init__.py  adapter.py  lora_linear.py
areal/experimental/models/archon/moe/: grouped_experts.py
areal/experimental/models/archon/qwen2/infra/: parallelize.py
areal/experimental/models/archon/qwen2/model/: state_dict_adapter.py
areal/experimental/models/archon/qwen3/infra/: parallelize.py
areal/experimental/openai/: client.py
areal/infra/: remote_inf_engine.py
areal/infra/controller/: train_controller.py
areal/infra/rpc/: rpc_server.py  rtensor.py
areal/infra/rpc/guard/: __init__.py  __main__.py  app.py  data_blueprint.py  engine_blueprint.py
areal/infra/scheduler/: local.py  ray.py  slurm.py
areal/infra/utils/: exp_metadata.py
areal/tools/: validate_docker_installation.py  validation_base.py
areal/trainer/: rl_trainer.py
areal/trainer/ppo/: actor.py
areal/utils/: logging.py  stats_logger.py
docs/: generate_cli_docs.py
docs/en/: cli_reference.md
docs/zh/: cli_reference.md
examples/experimental/inference_service/: README.md  human_in_the_loop_demo.py  online_rollout.py  online_rollout.yaml  tau2_rollout.py  tau2_rollout.yaml
examples/math/: gsm8k_sft_archon_fp8.yaml
tests/: test_examples.py  test_local_scheduler.py  test_rtensor.py  test_trackio_backend.py
tests/experimental/archon/: conftest.py  test_archon_engine_lora.py  test_archon_lora_checkpoint.py  test_lora_linear.py
tests/experimental/archon/fp8/: conftest.py  test_checkpoint_detect.py  test_checkpoint_e2e.py  test_checkpoint_integration.py  test_checkpoint_prepare.py  test_conversion.py  test_dequant.py  test_dequant_distributed.py  test_fp8_linear.py  test_fp8_scale_layout.py  test_moe_dispatch.py
tests/experimental/archon/fp8/torchrun/: run_checkpoint.py  run_sharded_dequant.py
tests/experimental/archon/torchrun/: dist_utils.py
tests/experimental/inference_service/: integration_utils.py  test_controller.py  test_controller_integration.py  test_data_proxy_chat.py  test_data_proxy_integration.py  test_data_proxy_standalone.py  test_examples.py  test_gateway.py  test_gateway_integration.py  test_guard.py  test_image_input.py  test_inf_bridge.py  test_ipv6_entrypoints.py  test_online_stack.py  test_router.py
